--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
       <div class="footer-col footer-col-3">
            <a target="_blank" href="https://facebook.com/{{site.f}}"><div class="social fb">f</div></a>
            <a target="_blank" href="https://twitter.com/{{site.t}}"><div class="social tw">t</div></a>
-           <a target="_blank" href="https://github.com/{{site.g}}"><div class="social ghp">g</div></a>
-           
+           <a target="_blank" href="https://instagram.com/{{site.i}}"><div class="social insta">i</div></a>
+
       </div>
     </div>
 
