--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,8 +46,8 @@
     @include media-query($on-palm) {
         font-size: 2em;
     }
-    
-    
+
+
 }
 .site-title:hover{text-decoration: none; color: #eee;}
 
@@ -68,7 +68,7 @@
             margin-right: 20px;
         }
     }
-    
+
     .page-link:hover {
         text-decoration: none;
         color: #eee;
@@ -82,17 +82,17 @@
         border: 1px solid #6a3093;
         border-radius: 2px;
         text-align: right;
-        
+
         /* .page-link {
             color: #aaa;
         } */
-            
+
          .page-link:hover {
         text-decoration: none;
         color: #fff;
         }
-        
-        
+
+
         .menu-icon {
             display: block;
             float: right;
@@ -244,7 +244,7 @@ a.post-link:hover{color: $color-1}
     @include media-query($on-laptop) {
             font-size: $small-font-size * 0.7;
         }
-    
+
 }
 
 .post-list .post-meta {
@@ -252,7 +252,7 @@ a.post-link:hover{color: $color-1}
      @include media-query($on-laptop) {
             margin-left: 0.4em;
         }
-    
+
 }
 
 .post-link {
@@ -283,7 +283,7 @@ a.post-link:hover{color: $color-1}
     }
 }
 
-.post-content { 
+.post-content {
     margin-bottom: $spacing-unit;
       h1 {
         font-size: $base-font-size * 2;
@@ -293,7 +293,7 @@ a.post-link:hover{color: $color-1}
             font-size: $base-font-size * 1.2;
         }
     }
-    
+
 
     h2 {
         font-size: $base-font-size * 1.5;
@@ -318,7 +318,7 @@ a.post-link:hover{color: $color-1}
             font-size: $base-font-size * 0.8;
         }
     }
-    
+
         h5 {
         font-size: $base-font-size * 1;
 
@@ -326,7 +326,7 @@ a.post-link:hover{color: $color-1}
             font-size: $base-font-size * 0.7;
         }
     }
-    
+
         h6 {
         font-size: $base-font-size * 0.9;
 
@@ -334,9 +334,9 @@ a.post-link:hover{color: $color-1}
             font-size: $base-font-size * 0.6;
         }
     }
-    
-    
-    
+
+
+
 }
 
 .wrapper.wrap-head {
@@ -363,13 +363,13 @@ a.post-link:hover{color: $color-1}
     background-color: #1b95e0;
 }
 
-.ghp {
+.insta {
     background-color: #777;
 }
 
 .copy {
     font-family: $head-font-family;
-    font-size: 1em;   
+    font-size: 1em;
 }
 
 .logo-svg {
@@ -581,15 +581,15 @@ ul.contact-ul {
 
 //contact form in contact page end
 .logo-text {
-    font-size: 75px; 
-    font-weight:600; 
-    letter-spacing:2px; 
-    color: #fff; 
+    font-size: 75px;
+    font-weight:600;
+    letter-spacing:2px;
+    color: #fff;
     text-transform: uppercase;
     &:hover {
         text-shadow: 0px 0px 2px;
     }
     @include media-query($on-palm) {
-        font-size: 30px;  
+        font-size: 30px;
     }
 }
