--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -582,9 +582,9 @@ ul.contact-ul {
 //contact form in contact page end
 .logo-text {
     font-size: 45px;
-    font-weight:normal;
+    font-weight:100;
     letter-spacing:2px;
-    color: #fff;
+    color: #E2DDDD;
     text-transform: uppercase;
     margin-bottom: 190px;
     &:hover {
