Trial: add js to add class when nav menu-icon is clicked

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -78,9 +78,9 @@
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: #6a3093;
-        border: 1px solid #6a3093;
-        border-radius: 2px;
+        // background-color: #6a3093;
+        // border: 1px solid #6a3093;
+        // border-radius: 2px;
         text-align: right;
 
         /* .page-link {
