--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <script src="js/jquery-2.2.2.min.js"></script>
+  <script src="js/main.js"></script>
 
   <style>
           {% capture include_to_scssify %}
