--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     </a>
 
     <nav class="site-nav">
-      <a href="#" class="menu-icon">
+      <a href="#" class="menu-icon js-navopen active">
         <svg viewBox="0 0 18 15">
           <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
           <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
@@ -15,13 +15,13 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="{{ site.url }}">ホーム</a>
+        <a class="page-link" href="http://multipotnomad.github.io/sitemap.xml">記事一覧</a>
         {% for my_page in site.pages %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
-        <a class="page-link" href="{{ site.url }}">ホーム</a>
-        <a class="page-link" href="http://multipotnomad.github.io/sitemap.xml">記事一覧</a>
       </div>
     </nav>
 
