--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -5,8 +5,7 @@ $color-2: {{site.color-2}};
 
 // Our variables
 $head-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: 'wj';
-/* $base-font-family: 'Source Serif Pro', serif; */
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 
 
@@ -59,5 +58,3 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
-
-
