--- a/css/main.scss
+++ b/css/main.scss
@@ -12,8 +12,7 @@ $color-2: {{site.color-2}};
 
 // Our variables
 $head-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: 'wj';
-/* $base-font-family: 'Source Serif Pro', serif; */
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 
 
