--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -54,13 +54,16 @@
 .site-nav {
     display: block;
     line-height: 56px;
+    font-weight: 100;
+    text-align: center;
+    font-size: 18px;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: #E2DDDD;
+        color: #d0c8c8;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the last one
