--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
   <!-- <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
