追いつかせる

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -4,13 +4,13 @@ $color-1: {{site.color-1}};
 $color-2: {{site.color-2}};
 
 // Our variables
-$head-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$head-font-family: 'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
+$base-font-family: 'Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3',sans-serif;
 
 
 
 $base-font-size:   23px;
-$base-font-weight: 400;
+$base-font-weight: 100;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.7;
 
