--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,7 +34,7 @@
     text-align: center;
     background-color: transparent;
     font-size: 4em;
-    font-weight: 700;
+    font-weight: 100;
     letter-spacing: -1px;
     margin-bottom: 0;
     margin-top: 0.625em;
@@ -117,7 +117,7 @@
     }
 
     .page-link {
-        color: #d0c8c8;
+        color: $color-2;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the last one
@@ -295,8 +295,7 @@ a.post-link:hover{color: $color-1}
 
 .post-title, .page-heading {
     font-family: $head-font-family;
-    font-weight: bold;
-    font-size: 2.5em;
+    font-size: 1.5em;
     letter-spacing: -1px;
     line-height: 1;
     margin-top: 1em;
@@ -426,7 +425,7 @@ table {
     table tr:nth-child(2n) {
       background-color: #f8f8f8; }
     table tr th {
-      font-weight: bold;
+      font-weight: 100;
       border: 1px solid $grey-color;
       text-align: left;
       margin: 0;
@@ -445,7 +444,7 @@ table {
 // Adding 'Contents' headline to the TOC
 #markdown-toc::before {
     content: "Contents";
-    font-weight: bold;
+    font-weight: 100;
 }
 
 
@@ -566,7 +565,7 @@ input#mce-EMAIL:focus {
     border:none;
     border-bottom: 1px solid #eee;
     transition-duration: 0.3s;
-    width: 12em;
+    width: 22em;
 }
 
 .contact-input:focus {
@@ -585,10 +584,12 @@ ul.contact-ul {
 
 #submit {
     border:none;
-    background-color: $brand-color;
+    background-color: $color-2;
     padding: 5px 15px;
-    color: #eee;
     opacity: 0.8;
+    height: 2.5em;
+    width: 5em;
+    border-radius: 3px;
 }
 
 #submit:hover {
@@ -598,7 +599,6 @@ ul.contact-ul {
 
 
 #contact-form {
-    border: 1px solid #aaa;
     display: inline-flex;
     margin-bottom: 6em;
 }
