--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-            <a target="_blank" href="{{site.url}}"><img src="https://img.shields.io/badge/Built%20by-{{site.built-by}}-blue.svg"></a>
+            <p>Copyright © 2018<br>旅するマルチポテンシャライト</p>
       </div>
 
       <div class="footer-col footer-col-2">
@@ -17,6 +17,7 @@
            <a target="_blank" href="https://facebook.com/{{site.f}}"><div class="social fb">f</div></a>
            <a target="_blank" href="https://twitter.com/{{site.t}}"><div class="social tw">t</div></a>
            <a target="_blank" href="https://instagram.com/{{site.i}}"><div class="social insta">i</div></a>
+           <a target="_blank" href="https://youtube.com/{{site.y}}"><div class="social yt">y</div></a>
 
       </div>
     </div>
