--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -97,7 +97,7 @@
       left: auto;
       display: block;
       width: 230px;
-      height: 300px;
+      height: 380px;
       z-index: 1;
       background-color: #fff;
       right: -100%;
@@ -192,6 +192,9 @@
     float: left;
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
+    @include media-query($on-palm) {
+      padding-left: 0;
+    }
 }
 
 .footer-col-1 {
@@ -237,7 +240,10 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: 80px 0 $spacing-unit;
+    @include media-query($on-palm) {
+      padding: 10px 0 $spacing-unit;
+    }
 }
 
 /* .page-heading {
@@ -299,10 +305,9 @@ a.post-link:hover{color: $color-1}
     letter-spacing: -1px;
     line-height: 1;
     margin-top: 1em;
-    margin-bottom: 0.2em;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+        font-size: 26px;
     }
 }
 
@@ -387,7 +392,11 @@ a.post-link:hover{color: $color-1}
 }
 
 .insta {
-    background-color: #777;
+    background-color: #9577b7;
+}
+
+.yt {
+    background-color: #c15353;
 }
 
 .copy {
@@ -559,6 +568,7 @@ input#mce-EMAIL:focus {
 //contact form in contact page start
 .contact-li {
     list-style: none;
+    margin-top: 30px;
 }
 
 .contact-input {
@@ -566,6 +576,14 @@ input#mce-EMAIL:focus {
     border-bottom: 1px solid #eee;
     transition-duration: 0.3s;
     width: 22em;
+    margin-top: 20px;
+    @include media-query($on-palm) {
+      width: 100%;
+    }
+}
+.contact-input::placeholder {
+    color: #d8d8d8;
+    font-weight: 100;
 }
 
 .contact-input:focus {
@@ -577,19 +595,28 @@ input#mce-EMAIL:focus {
     display: block;
 }
 
-ul.contact-ul {
+ul.contact-ul,
+.contact-submit {
     margin: 0;
     padding: 10px;
+    @include media-query($on-palm) {
+      width: 14em;
+      margin: auto;
+    }
 }
 
 #submit {
     border:none;
-    background-color: $color-2;
+    background-color: rgba(208, 200, 200, 0.5);
     padding: 5px 15px;
     opacity: 0.8;
     height: 2.5em;
     width: 5em;
     border-radius: 3px;
+    margin-bottom: 8px;
+    @include media-query($on-palm) {
+      float: right;
+    }
 }
 
 #submit:hover {
@@ -599,8 +626,15 @@ ul.contact-ul {
 
 
 #contact-form {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     margin-bottom: 6em;
+    @include media-query($on-palm) {
+      flex-direction: column;
+      align-items: flex-end;
+      margin-bottom: 0;
+    }
 }
 
 //contact form in contact page end
