--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -22,8 +22,9 @@
     background-size: cover;
 
     @include media-query($on-palm) {
-        padding: 2em 0 1em 0;
-        height: 8em;
+      background: url("/dist/images/sp/purpletokyo.jpg") no-repeat;
+      padding: 2em 0 1em 0;
+      height: 8em;
     }
 
 }
