--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,13 @@
   <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
 
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.ico">
 
-  <script src="{{site.baseurl}}/js/jquery-2.2.2.min.js"></script>
-  <script src="{{site.baseurl}}/js/main.js"></script>
+  <script src="{{site.url}}/js/jquery-2.2.2.min.js"></script>
+  <script src="{{site.url}}/js/main.js"></script>
 
   <style>
           {% capture include_to_scssify %}
