change: youtube url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
            <a target="_blank" href="https://facebook.com/{{site.f}}"><div class="social fb">f</div></a>
            <a target="_blank" href="https://twitter.com/{{site.t}}"><div class="social tw">t</div></a>
            <a target="_blank" href="https://instagram.com/{{site.i}}"><div class="social insta">i</div></a>
-           <a target="_blank" href="https://youtube.com/{{site.y}}"><div class="social yt">y</div></a>
+           <a target="_blank" href="https://youtube.com/channel/{{site.y}}"><div class="social yt">y</div></a>
 
       </div>
     </div>
