--- a/_includes/share.html
+++ b/_includes/share.html
@@ -7,15 +7,15 @@
 <a class="share-button twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">twitter</a>
 
-<a class="share-button google" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" >google</a>
+<!-- <a class="share-button google" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'mywin',
+'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" >google</a> -->
 
 <!-- <a class="share-button reddit" href="http://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;" >reddit</a>                            -->
 
-<a class="share-button linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}&summary={{ page.description }}&source={{site.title | truncatewords: 1}}" onclick="window.open(this.href, 'mywin',
+<!-- <a class="share-button linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}&summary={{ page.description }}&source={{site.title | truncatewords: 1}}" onclick="window.open(this.href, 'mywin',
 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" >linkedin</a>
 
-<a class="share-button email" href="mailto:?subject={{ page.title }}&amp;body=リンク： {{ site.url }}{{ page.url }}">email</a>
+<a class="share-button email" href="mailto:?subject={{ page.title }}&amp;body=リンク： {{ site.url }}{{ page.url }}">email</a> -->
 </div>
 </div>
