--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,17 +1,18 @@
 <!-- Disqus comments -->
+
 <div itemprop="comment" id="disqus_thread"></div>
+<script>
 
-<script defer>
-  
-(function() {
+var disqus_config = function () {
+this.page.url = https://multipotnomad.github.io;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = multipotnomad; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-
-s.src = '//{{site.disqus-shortname}}.disqus.com/embed.js';
-
+s.src = 'https://multipotnomad.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
-
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
