--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,10 +22,11 @@ comments: true
 
 
 </article>
+<!-- share -->
 {% include share.html %}
-<div
-class="just-comments"
-data-locale="ja"
-data-apikey="675e9cc5-75d3-4067-919d-f0732f28b21a">
-</div>
-<script async src="https://just-comments.com/w.js"></script>
+
+<!-- links to prev and next posts -->
+{% include pagenav.html %}
+
+<!-- comments -->
+{% include comments.html %}
