--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
 
   <script src="{{site.url}}/js/jquery-2.2.2.min.js"></script>
   <script src="{{site.url}}/js/main.js"></script>
+  {% include analytics.html %}
+  
 
   <style>
           {% capture include_to_scssify %}
