--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,8 @@
 layout: default
 comments: true
 ---
-<nav class="site-nav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a class="page-link" href="{{ site.url }}/">最新記事</a>
-    <a class="page-link" href="{{ site.url }}/posts">記事一覧</a>
-    <a class="page-link" href="{{site.url}}/about/">このサイトについて</a>
-    <a class="page-link" href="{{site.url}}/contact/">お問い合わせ</a>
-</nav>
+{% include nav.html %}
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
